Begin CSS styling for header.

--- a/index.html
+++ b/index.html
@@ -9,35 +9,42 @@
 <body>
   <div class="body">
     <div class="header">
-      <h2>Header Logo</h2>
-      <ul>
-        <li>Header Link One</li>
-        <li>Header Link Two</li>
-        <li>Header Link Three</li>
-      </ul>
-      <h1>This website is awesome</h1>
-      <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-      <div class="img">This is going to be an image eventually</div>
-      <button>Sign Up</button>
+      <div class="top">
+        <h2>Header Logo</h2>
+        <ul>
+          <li>Header Link One</li>
+          <li>Header Link Two</li>
+          <li>Header Link Three</li>
+        </ul>
+      </div>
+      <div class="bottom">
+        <div class="header-text">
+          <h1>This website is awesome</h1>
+          <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+          <button>Sign Up</button>
+        </div>
+        <div class="img">This is going to be an image eventually</div>
+        
+      </div>
     </div>
 
     <div class="content">
       <div class="content-top">
         <h3>Some random information.</h3>
         <div class="img1">
-          <img src="TBD" alt="Image One">
+          <img src="/images/img-placeholder.png" alt="Image One">
           <div class="subtext">This is going to describe Image One.</div>
           </div>
         <div class="img2">
-          <img src="TBD" alt="Image Two">
+          <img src="/images/img-placeholder.png" alt="Image Two">
           <div class="subtext">This is going to describe Image Two.</div>
         </div>
         <div class="img3">
-          <img src="TBD" alt="Image Three">
+          <img src="/images/img-placeholder.png" alt="Image Three">
           <div class="subtext">This is going to describe Image Three.</div>
         </div>
         <div class="img4">
-          <img src="TBD" alt="Image Four">
+          <img src="/images/img-placeholder.png" alt="Image Four">
           <div class="subtext">This is going to describe Image Four.</div>
         </div>  
       </div>
@@ -54,7 +61,7 @@
       </div>
   
     </div>
-    
+
     <div class="footer">
       <p>Copyright The Odin Project 2024</p>
     </div>
