--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="body">
     <div class="header">
       <div class="top">
-        <h2>Header Logo</h2>
+        <p class="header-logo">Header Logo</p>
         <ul>
           <li>Header Link One</li>
           <li>Header Link Two</li>
@@ -19,8 +19,8 @@
       </div>
       <div class="bottom">
         <div class="header-text">
-          <h1>This website is awesome</h1>
-          <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+          <p class="hero-text">This website is awesome</p>
+          <p class="secondary-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
           <button>Sign Up</button>
         </div>
         <div class="img">This is going to be an image eventually</div>
