--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="header-text">
           <p class="hero-text">This website is awesome</p>
           <p class="secondary-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-          <button>Sign Up</button>
+          <button class="button-top">Sign Up</button>
         </div>
         <div class="img">This is going to be an image eventually</div>
         
