Begin to format the main body content area.

--- a/index.html
+++ b/index.html
@@ -21,32 +21,34 @@
         <div class="header-text">
           <p class="hero-text">This website is awesome</p>
           <p class="secondary-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-          <button class="button-top">Sign Up</button>
+          <button class="bu">Sign Up</button>
         </div>
-        <div class="img">This is going to be an image eventually</div>
+        <div class="header-img">This is going to be an image eventually</div>
         
       </div>
     </div>
 
     <div class="content">
       <div class="content-top">
-        <h3>Some random information.</h3>
-        <div class="img1">
-          <img src="/images/img-placeholder.png" alt="Image One">
-          <div class="subtext">This is going to describe Image One.</div>
+        <p class="content-header">Some random information.</p>
+        <div class="content-images">
+          <div class="img">
+            <img src="/images/img-placeholder.png" alt="Image One">
+            <div class="subtext">This is going to describe Image One.</div>
+            </div>
+          <div class="img">
+            <img src="/images/img-placeholder.png" alt="Image Two">
+            <div class="subtext">This is going to describe Image Two.</div>
           </div>
-        <div class="img2">
-          <img src="/images/img-placeholder.png" alt="Image Two">
-          <div class="subtext">This is going to describe Image Two.</div>
-        </div>
-        <div class="img3">
-          <img src="/images/img-placeholder.png" alt="Image Three">
-          <div class="subtext">This is going to describe Image Three.</div>
-        </div>
-        <div class="img4">
-          <img src="/images/img-placeholder.png" alt="Image Four">
-          <div class="subtext">This is going to describe Image Four.</div>
-        </div>  
+          <div class="img">
+            <img src="/images/img-placeholder.png" alt="Image Three">
+            <div class="subtext">This is going to describe Image Three.</div>
+          </div>
+          <div class="img">
+            <img src="/images/img-placeholder.png" alt="Image Four">
+            <div class="subtext">This is going to describe Image Four.</div>
+          </div> 
+        </div> 
       </div>
       <div class="quote">
         <p class="quote-text">This is an inspriring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Why knows? All I know is that it looks nice.</p>
@@ -59,7 +61,6 @@
           <button>Sign Up</button>
         </div>
       </div>
-  
     </div>
 
     <div class="footer">
