--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="header-text">
           <p class="hero-text">This website is awesome</p>
           <p class="secondary-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-          <button class="bu">Sign Up</button>
+          <button class="button-top">Sign Up</button>
         </div>
         <div class="header-img">This is going to be an image eventually</div>
         
@@ -51,8 +51,8 @@
         </div> 
       </div>
       <div class="quote">
-        <p class="quote-text">This is an inspriring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Why knows? All I know is that it looks nice.</p>
-        <p class="signature">-Michael Scott, MSPC</p>
+        <p class="quote-text">"Sometimes I'll start a sentence and I dont know where it's going. I just hope to find it somewhere along the way... Like an improv conversation. An improversation."</p>
+        <p class="signature">-Michael Scott, Regional Manager</p>
       </div>
       <div class="sign-up">
         <div class="box">
