--- a/index.html
+++ b/index.html
@@ -56,9 +56,11 @@
       </div>
       <div class="sign-up">
         <div class="box">
-          <p>Call to action! It's time!</p>
-          <p>Sign up for our product by clicking that button right over there!</p>
-          <button>Sign Up</button>
+          <div class="box-text">
+            <p class="button-header">Call to action! It's time!</p>
+            <p class="button-subtext">Sign up for our product by clicking that button right over there!</p>
+          </div>
+          <button class="button-btm">Sign Up</button>
         </div>
       </div>
     </div>
