Add logo to webpage, create a business.

--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
   <div class="body">
     <div class="header">
       <div class="top">
-        <p class="header-logo">Header Logo</p>
+        <img class="header-logo" src="images/bsd-tp-crop.png">
         <ul>
-          <li>Header Link One</li>
-          <li>Header Link Two</li>
-          <li>Header Link Three</li>
+          <li>About BSD</li>
+          <li>Locations</li>
+          <li>Merchandise</li>
         </ul>
       </div>
       <div class="bottom">
         <div class="header-text">
-          <p class="hero-text">This website is awesome</p>
-          <p class="secondary-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+          <p class="hero-text">Baked with Love.</p>
+          <p class="secondary-text">Made with freshly made dough every morning, our bread is the best bread in the whole world. Stop by and taste for yourself or sign up for our weekly newsletter! </p>
           <button class="button-top">Sign Up</button>
         </div>
-        <div class="header-img">This is going to be an image eventually</div>
+        <img class="header-img" src="images/bsd-tp-crop.png"></img>
         
       </div>
     </div>
@@ -66,7 +66,7 @@
     </div>
 
     <div class="footer">
-      <p>Copyright The Odin Project 2024</p>
+      <p>Copyright &copy; The Odin Project 2024</p>
     </div>
   </div>
   
