--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       <div class="top">
         <img class="header-logo" src="images/bsd-tp-crop.png">
         <ul>
-          <li>About BSD</li>
-          <li>Locations</li>
-          <li>Merchandise</li>
+          <li><a href="index.html">About BSD</a></li>
+          <li><a href="index.html">Locations</a></li>
+          <li><a href="index.html">Merchandise</a></li>
         </ul>
       </div>
       <div class="bottom">
