Adjust image directory to work on Git Pages.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="bottom">
         <div class="header-text">
           <p class="hero-text">Baked with Love.</p>
-          <p class="secondary-text">Made with freshly made dough every morning, our bread is the best bread in the whole world. Stop by and taste for yourself or sign up for our weekly newsletter! </p>
+          <p class="secondary-text">Baked with freshly made dough every morning, our bread is the best bread in the whole world. Stop by and taste for yourself or sign up for our weekly newsletter! </p>
           <button class="button-top">Sign Up</button>
         </div>
         <img class="header-img" src="images/bsd-tp-crop.png"></img>
@@ -30,23 +30,23 @@
 
     <div class="content">
       <div class="content-top">
-        <p class="content-header">Some random information.</p>
+        <p class="content-header">Our Specialties</p>
         <div class="content-images">
           <div class="img">
-            <img src="/images/img-placeholder.png" alt="Image One">
-            <div class="subtext">This is going to describe Image One.</div>
+            <img src="images/french_loaf.jpg" alt="Image One">
+            <div class="subtext">Elegant french loaves & baguettes, baked fresh all day.</div>
             </div>
           <div class="img">
-            <img src="/images/img-placeholder.png" alt="Image Two">
-            <div class="subtext">This is going to describe Image Two.</div>
+            <img src="images/sd_loaf.jpg" alt="Image Two">
+            <div class="subtext">Rustic sourdough, packed with flavor.</div>
           </div>
           <div class="img">
-            <img src="/images/img-placeholder.png" alt="Image Three">
-            <div class="subtext">This is going to describe Image Three.</div>
+            <img src="images/croissant.jpg" alt="Image Three">
+            <div class="subtext">Hand-rolled crosissants & danishes, available every morning.</div>
           </div>
           <div class="img">
-            <img src="/images/img-placeholder.png" alt="Image Four">
-            <div class="subtext">This is going to describe Image Four.</div>
+            <img src="images/desserts.jpg" alt="Image Four">
+            <div class="subtext">Beautifully crafted cupcakes, pies and cakes for any occasion.</div>
           </div> 
         </div> 
       </div>
@@ -57,16 +57,16 @@
       <div class="sign-up">
         <div class="box">
           <div class="box-text">
-            <p class="button-header">Call to action! It's time!</p>
-            <p class="button-subtext">Sign up for our product by clicking that button right over there!</p>
+            <p class="button-header">Interested in our catering service?</p>
+            <p class="button-subtext">Check out our offers by clicking that button right over there!</p>
           </div>
-          <button class="button-btm">Sign Up</button>
+          <button class="button-btm">Catering Info</button>
         </div>
       </div>
     </div>
 
     <div class="footer">
-      <p>Copyright &copy; The Odin Project 2024</p>
+      <p>Copyright &copy; Odin Project 2024</p>
     </div>
   </div>
   
